[package]
name = "invoice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
mongodb = "2.3.0"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
futures = { version = "0.3.21", features = ["std"], default-features = false }
