[package]
name = "invoice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
mongodb = { version = "2.2.2", features = ["bson-chrono-0_4"] }
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
futures = { version = "0.3.21", features = ["std"], default-features = false }
strum = { version = "0.24", features = ["derive"] }
chrono = { version = "0.4.22" }
